--- a/app/views/book/offline.erb
+++ b/app/views/book/offline.erb
@@ -1,6 +1,4 @@
-<script>
 
-</script>
 
 <div style="background-color:lightgray; padding-top:150px;padding-bottom:150px" id="menu_font">
   
@@ -30,9 +28,11 @@
                   
                 </div>
                 
+                <br>
+                
                 <div class="input-group">
                   <span class="input-group-addon" id="basic-addon1">호수</span>
-                  <input type="text" class="form-control" name="user" required>
+                  <input type="number" class="form-control" name="user" required>
                   
                 </div>
                 
