--- a/app/views/book/admin_menu.erb
+++ b/app/views/book/admin_menu.erb
@@ -14,8 +14,10 @@
             
             <div class="col-md-6 col-md-sm-6">
               <a type="button" class="btn btn-info btn-lg btn-block" href="/book/reser_admin?reservation_date=<%=Time.zone.today%>&reservation_time=<%="0:0".to_time%>&reservation_building=선택안함&reservation_department=선택안함" >예약 통합 관리</a>
+              <!--<br>-->
+              <!--<a href="/book/offline" type="button" class="btn btn-default btn-lg btn-block" >오프라인 예약</a>-->
               <br>
-              <a href="/book/offline" type="button" class="btn btn-default btn-lg btn-block" >오프라인 예약</a>
+              <a  type="button" class="btn btn-default btn-lg btn-block" >강의실별 수업</a>
               <br>
              
               <!--<br>?reservation_date=< %=Time.zone.today%>&reservation_time=< %=Date.beginning_of_day()%>&reservation_building=선택안함&reservation_department=선택안함-->
