--- a/app/views/book/offline.erb
+++ b/app/views/book/offline.erb
@@ -32,7 +32,7 @@
                 
                 <div class="input-group">
                   <span class="input-group-addon" id="basic-addon1">호수</span>
-                  <input type="number" class="form-control" name="user" required>
+                  <input type="number" class="form-control" name="room" required>
                   
                 </div>
                 
@@ -47,7 +47,7 @@
                 
                 <div class="input-group">
                   <span class="input-group-addon" id="basic-addon1">소속</span>
-                  <input type="text" class="form-control" name="user" required>
+                  <input type="text" class="form-control" name="department" required>
                 </div>
                 
                 <br>
