--- a/app/views/book/mypage.erb
+++ b/app/views/book/mypage.erb
@@ -1,4 +1,54 @@
 
+<!-- 예약 취소 -->
+<% Reservation.all.each do |c| %>
+<div id="delete_check<%=c.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel">예약 취소</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">예약을 취소하시겠습니까?</label>
+        </div>
+      <div class="modal-footer">
+            <form action="/book/delete/<%=c.id%>" method="POST">
+              <button type="submit" class="btn btn-danger">취소하기</button>
+            </form>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+<%end%>
+<!-- 예약 취소 끝 -->
+ 
+<!--사유보기 -->
+<% Message.all.each do |c| %>
+
+<div id="reason_show<%=c.sender%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel">거절 이유</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="recipient-name" class="control-label"><%=c.content%></label>
+        </div>
+      <div class="modal-footer">
+            <form action="/book/delete/<%=c.id%>" method="POST">
+              <button type="submit" class="btn btn-danger">취소하기</button>
+            </form>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+<%end%>
+
 
 <div style="background-color:lightgray; padding-top:150px; padding-bottom:150px" id="menu_font">
   
@@ -123,7 +173,7 @@
                             <div class="btn-group" role="group" aria-label="...">
                               <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#delete_check<%=r.id%>">예약취소</button>
                               <%if r.state=="거절"%>
-                                <button type="button" class="btn btn-info btn-sm" id="reason_show<%=r.id%>" data-toggle="modal" data-target="#reason_show<%=r.id%>">사유보기</button>
+                                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#reason_show<%=r.id%>">사유보기</button>
                               <%end%>
                             </div>
                               
@@ -890,51 +940,4 @@
 <!--</div>-->
 
 
-<% Reservation.all.each do |c| %>
-<div id="delete_check<%=c.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">예약 취소</h4>
-      </div>
-      <div class="modal-body">
-        <div class="form-group">
-          <label for="recipient-name" class="control-label">예약을 취소하시겠습니까?</label>
-        </div>
-      <div class="modal-footer">
-            <form action="/book/delete/<%=c.id%>" method="POST">
-              <button type="submit" class="btn btn-danger">취소하기</button>
-            </form>
-      </div>
-      </div>
-    </div>
-  </div>
-</div>
-<%end%>
 
- 
-<!--사유보기 -->
-<% Message.where("receiver = ?", current_user.id).each do |c| %>
-
-<div id="reason_show<%=c.sender%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">취소 사유</h4>
-      </div>
-      <div class="modal-body">
-        <div class="form-group">
-          <label for="recipient-name" class="control-label"><%=c.content%>예약을 취소하시겠습니까?</label>
-        </div>
-      <div class="modal-footer">
-            <form action="/book/delete/<%=c.id%>" method="POST">
-              <button type="submit" class="btn btn-danger">취소하기</button>
-            </form>
-      </div>
-      </div>
-    </div>
-  </div>
-</div>
-<%end%>
